--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -15,3 +15,6 @@
   height: 200px;
   -webkit-transform: rotate(180deg);
   transform: rotate(180deg);
+
+body
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
