--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -1,29 +1,6 @@
-.box
-  border-style: solid;
-  border-width: 1px;
-  display: block;
-  width: 100px;
-  height: 100px;
-  background-color: #0000FF;
-  -webkit-transition: width 2s, height 2s, background-color 2s, -webkit-transform 2s;
-  transition: width 2s, height 2s, background-color 2s, transform 5s;
-
-
-.box:hover
-  background-color: #FFCCCC;
-  width: 200px;
-  height: 200px;
-  -webkit-transform: rotate(180deg);
-  transform: rotate(180deg);
-
 body
   margin: 0;
   padding: 0;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 
-.videoThumb
-    height: 200px
-    margin:5px
-.vjs_video_3-dimensions
-    width: 100%
-    margin:5px
+@import './components/_video.styl';
