--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -4,3 +4,4 @@ body
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 
 @import './components/_video.styl';
+@import './components/_overlay.styl';
