--- a/www/app/stylus/components/_overlay.styl
+++ b/www/app/stylus/components/_overlay.styl
@@ -1,5 +1,8 @@
  .trapezoid 
-	border-bottom: 32px solid red
+	border-bottom: 32px solid rgba(255,0,0,.5)
 	border-right: 16px solid transparent
 	height: 0
-	width: 100px
+	width: 200px
+	position: absolute
+	bottom: 32px
+	z-index: 2147483647
