LIVE-31 add carousel, style with RH panel for video details (next to do is video details Minor styling changes

--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -1,7 +1,9 @@
 body
   margin: 0;
   padding: 0;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Roboto, Verdana, Geneva, Tahoma, sans-serif;
 
 @import './components/_video.styl';
 @import './components/_overlay.styl';
+@import './components/_carousel.styl';
+@import './_fonts.styl';
