--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -3,5 +3,10 @@ body
   padding: 0;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 
+
 @import './components/_video.styl';
 @import './components/_overlay.styl';
+@import './components/_common.styl';
+@import './components/_mainframe.styl';
+
+
