LIVE-36 Added Rendering Hover Component

--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -3,7 +3,7 @@ body
   padding: 0;
   font-family: Roboto, Verdana, Geneva, Tahoma, sans-serif;
 
-
+@import './components/_productcard.styl';
 @import './components/_video.styl';
 @import './components/_overlay.styl';
 @import './components/_common.styl';
