Restructured styles folder

--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -9,4 +9,4 @@ body
 @import './components/_common.styl';
 @import './components/_mainframe.styl';
 @import './components/_carousel.styl';
-@import './_fonts.styl';
+@import './constants/_fonts.styl';
