LIVE-30 Added media queries for header and responsiveness. Tabs for medium screen, fullscreen menu on mobile. Added accessibility attributes to clickable elements. Removed inline styles, added classes instead.

--- a/www/app/stylus/components/_common.styl
+++ b/www/app/stylus/components/_common.styl
@@ -1,6 +1,10 @@
 .inline
 	display:inline-block
-.left
+.floatLeft
 	float:left
-.right
+.floatRight
 	float:right
+.paddingRight
+	padding-right: 40px
+.paddingLeft
+	padding-left: 40px
