--- a/www/app/stylus/components/_productcard.styl
+++ b/www/app/stylus/components/_productcard.styl
@@ -2,8 +2,9 @@
 
 .product-card {
     background-color: $color_void;
+    color: $color_paper;
     position: relative;
-	width: 100%; /* <-- just a default, can be anything. */
+	width: 100%;
     overflow: hidden;
 }
 .sixteen-by-nine{
@@ -20,19 +21,23 @@
     width:100%;
     display: flex;
     justify-content: center;
+    background-color: $color_void;
 }
 
 .tab-link {
-
     color: $color_paper;
     border: none;
     outline: none;
     cursor: pointer;
     padding: 14px 16px;
-    background-color: $color_irises;
-    border-left: 1px solid $color_paper;
+    background-color: $color_void;
+    border-left: 0.1px dashed $color_charcoal;
+    transition: background-color 1s;
     &.active {
-        color: $color_irises;
+        color: $color_void;
         background-color: $color_paper;
+    }
+    &:last-child {
+        border-right: 0.1px dashed $color_charcoal;
     }
 }
