LIVE-32 slideys with buttons

--- a/www/app/stylus/components/_mainframe.styl
+++ b/www/app/stylus/components/_mainframe.styl
@@ -1,5 +1,19 @@
 .slide
 	padding: 0;
 
-h1.rowTitle
-	width: 100%;
+h3.rowTitle
+	margin: 12px 0 0 10px
+	text-transform: uppercase
+	float: left
+	font-family: Roboto, sans-serif;
+
+.sliderButtons
+	float: right
+
+.slider
+	float: none
+	width: 100%
+	clear: both
+
+
+	
