--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -1,7 +1,7 @@
 body
   margin: 0;
   padding: 0;
-  font-family: Roboto, sans-serif;
+  font-family: Roboto, Verdana, Geneva, Tahoma, sans-serif;
 
 @import './components/_productcard.styl';
 @import './components/_video.styl';
