--- a/www/app/stylus/components/_mainframe.styl
+++ b/www/app/stylus/components/_mainframe.styl
@@ -14,6 +14,16 @@ h3.rowTitle
 	float: none
 	width: 100%
 	clear: both
+	overflow: hidden
+
+//This margin makes room for the header being positioned fixed at top of it. 
+.main
+	margin-bottom: 50px
+	margin-top: 56px;
+	
+@media (min-width: 1000px)
+	.main
+		margin-top: 0;
 
 
 	
