--- a/www/app/stylus/components/_header.styl
+++ b/www/app/stylus/components/_header.styl
@@ -4,13 +4,25 @@
 
 .header{
   width: 100%;
-  overflow: auto;
   background-color: #212121;
   text-transform: none !important;
   position: fixed;
   top: 0;
   z-index: 999;
+  color: #fff
 }
+
+.rightMenu{
+  float:right;
+}
+
+@media (min-width: 1000px){
+  .rightMenu{
+    padding-right:20px;
+  }
+}
+
+
 #header-container *{
   text-transform: none !important;
 }
@@ -62,17 +74,16 @@
 }
 
 .expandableMenu{
-  background-color: rgba(0, 0, 0, .95); 
+  background-color: rgba(33, 33, 33, .95); 
   position: fixed;
-  top: 0;
+  top: 49px;
   left: 0;
   width: 100%;
   height: 100%;
   z-Index: 999999;
-  overflow:hidden;
+  overflow:auto;
   color: #fff;
   list-style-type: none;
-  padding-top: 16px;
 }
 
 //All paragraphs(items) in menu
@@ -112,7 +123,6 @@ p.divider{
   right: 20px
   position: absolute;
 }
-
 .bottomTabs{
   position:fixed;
   bottom: 0;
@@ -123,3 +133,53 @@ p.divider{
   background-color: #212121;
   color: #fff;
 }
+
+// MENU BUTTON ANIMATIONS
+
+
+.animMenuIcon{
+  padding: 12px 0 12px 12px;
+  margin: 2px
+  vertical-align: middle;
+  stroke-linecap: round;
+}
+
+.animMenuIcon .bottom, .animMenuIcon .middle, .animMenuIcon .top{
+    transition: all 0.3s cubic-bezier(.02, .01, .47, 1);
+    fill: red;
+}
+
+.animMenuIcon.closed.subPage{
+  transform: scale(0.9, 1);
+  .top{
+      transform-origin: top right;
+      transform: rotate(-20deg) translate(0, -1.5px);
+  }
+  .bottom{
+      transform-origin: bottom right;
+      transform: rotate(20deg) translate(0, 1.5px);
+  }
+  .middle{
+    transform: translate(22px, 0);
+  }
+}
+
+.animMenuIcon.open{
+  .top{
+      transform-origin: center;
+      transform: rotate(-45deg) translate(-3.5px, 3.5px);
+  }
+  .bottom{
+      transform-origin: center;
+      transform: rotate(45deg) translate(-3px, -3.5px); 
+  }
+
+  .middle{
+    opacity: 0.5
+    transform: translate(22px, 0);
+  }
+
+
+}
+
+
