--- a/www/app/stylus/components/_header.styl
+++ b/www/app/stylus/components/_header.styl
@@ -74,12 +74,10 @@
 }
 
 .expandableMenu{
-  background-color: rgba(33, 33, 33, .95); 
+  background-color: rgba(33, 33, 33, 1); 
   position: fixed;
-  top: 49px;
-  left: 0;
+  top: 48px;
   width: 100%;
-  height: 100%;
   z-Index: 999999;
   overflow:auto;
   color: #fff;
