--- a/www/app/stylus/components/_carousel.styl
+++ b/www/app/stylus/components/_carousel.styl
@@ -245,3 +245,55 @@
   min-height: 0;
   min-width: 0;
 }
+
+.heroCarousel
+  display: flex
+
+.carouselLeft
+  flex-basis: 67%
+
+.carouselRight
+  flex-basis: 33%
+  background-color: black
+  color: white
+
+.carouselRightSlider
+  height: 100%
+
+.carouselRightSlider ul.slick-dots
+  bottom: 10px
+
+.slick-slide img 
+  display: block;
+  width: 100%;
+
+.infoTileCTA
+  font-size: 2em
+  margin: 22px
+  font-weight: normal
+
+.carouselRight .slick-dots li.slick-active button:before, .carouselRight .slick-dots li button::before
+  color: white
+
+.carouselRight .carouselTitleAndDescription
+  width: calc(80% - 60px)
+  float: left
+
+.carouselRight .slick-next:before, .carouselRight .slick-prev:before
+  font-size: 50px
+  text-shadow: 2px 2px 4px rgba(150, 150, 150, 1)
+
+.carouselRight .slick-prev 
+  left: -200%
+
+.carouselRight .slick-next
+  right: 40px
+
+@media (max-width: 480px)
+  .carouselRight
+    display: none
+  .carouselLeft
+    flex-basis: 100%
+
+
+
