LIVE-33 Created category page

--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -11,3 +11,4 @@ body
 @import './components/_carousel.styl';
 @import './components/_header.styl';
 @import './constants/_fonts.styl';
+@import './components/_category.styl';
