LIVE-31 added title, description, play button to mobile carousel

--- a/www/app/stylus/components/_carousel.styl
+++ b/www/app/stylus/components/_carousel.styl
@@ -251,6 +251,7 @@
 
 .carouselLeft
   flex-basis: 67%
+  background-color: black
 
 .carouselRight
   flex-basis: 33%
@@ -295,6 +296,17 @@
   text-overflow: ellipsis
   overflow: hidden
 
+.carouselImageButton
+  position: absolute
+  top: 0  
+
+.carouselImageTitleAndDescription
+  position: absolute;
+  top: 30px;
+  color: white;
+  left: 120px;
+  width: 60%;
+
 .heroCarouselVideo    
   display: block
 .heroCarouselImage 
@@ -311,6 +323,7 @@
     display: none
   .heroCarouselImage 
     display: block
+    position: relative
   .carouselLeft
     flex-basis: 100%
   .heroCarousel
