--- a/www/app/stylus/components/_overlay.styl
+++ b/www/app/stylus/components/_overlay.styl
@@ -1,5 +1,5 @@
  .trapezoid 
-	border-top: : 32px solid rgba(255,0,0,.5)
+	border-top: 32px solid rgba(255,0,0,.5)
 	border-right: 16px solid transparent
 	height: 0
 	width: 200px
