--- a/www/app/stylus/constants/_variables.styl
+++ b/www/app/stylus/constants/_variables.styl
@@ -1,7 +1,9 @@
-$color_evening = #262228;
-$color_charcoal = #373737;
-$color_paper = #f4f4f4;
-$color_irises = #007849;
-$color_starry = #037584;
-$color_void = #0E0B16;
-$color_gold = #ffd700;
+$color_charcoal = #373737; //dark grey
+$color_gold = #ffd700; //yellow
+$color_paper = #f4f4f4; //light_yellow
+$color_evening = #262228; //dark-purple1
+$color_void = #0E0B16; //dark-purple2
+$color_ocean = #2cd5fd; //blue1
+$color_starry = #037584; //blue2
+$color_irises = #007849; //green
+$cubic = cubic-bezier(.02, .01, .47, 1); //transition
