--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -12,3 +12,5 @@ body
 @import './components/_header.styl';
 @import './constants/_fonts.styl';
 @import './components/_category.styl';
+@import './components/_search.styl';
+
