--- a/www/app/stylus/constants/_variables.styl
+++ b/www/app/stylus/constants/_variables.styl
@@ -6,4 +6,5 @@ $color_void = #0E0B16; //dark-purple2
 $color_ocean = #2cd5fd; //blue1
 $color_starry = #037584; //blue2
 $color_irises = #007849; //green
+$color_smoke = #F5F5F5; //white smoke
 $cubic = cubic-bezier(.02, .01, .47, 1); //transition
