--- a/www/app/stylus/constants/_variables.styl
+++ b/www/app/stylus/constants/_variables.styl
@@ -3,7 +3,7 @@ $color_gold = #ffd700; //yellow
 $color_paper = #f4f4f4; //light_yellow
 $color_evening = #262228; //dark-purple1
 $color_void = #0E0B16; //dark-purple2
-$color_ocean = #2cd5fd; //blue1
+$color_ocean = #00ccd8; //blue1
 $color_starry = #037584; //blue2
 $color_irises = #007849; //green
 $color_smoke = #F5F5F5; //white smoke
