--- a/www/app/stylus/components/_video.styl
+++ b/www/app/stylus/components/_video.styl
@@ -10,10 +10,10 @@
 ._grid
 	.videoThumb
 		height:125px
-	@media (min-width: 500px)
+	@media (min-width: $grid_md)
 		.videoThumb
 			height:220px
-	@media (min-width: 1024px)
+	@media (min-width: $grid_bg)
 		.videoThumb
 			height:150px
 
