--- a/www/app/stylus/constants/_variables.styl
+++ b/www/app/stylus/constants/_variables.styl
@@ -8,3 +8,26 @@ $color_starry = #037584; //blue2
 $color_irises = #007849; //green
 $color_smoke = #F5F5F5; //white smoke
 $cubic = cubic-bezier(.02, .01, .47, 1); //transition
+
+//Constants for height
+$bottom_offset = 72px; //Height of the bottomTabs. 
+$top_offset = 48px; //Height of the header.
+
+//Media queries
+//$tiny_screen
+//$small_screen
+//$medium_screen
+$big_screen = 1000px; //Tablet/desktop. Below $big tabs are visible, above tabs are invisible, items are visible in header. 
+$bigger_screen = 1500px; //More items are visible in the header at this point, not much else changes. 
+
+//Thumbs/grid breakpoints used with grid and thumbs. 
+$grid_md = 500px;
+$grid_bg = 1024px;
+
+//Font sizes
+$font_xs = 12px; //Starts getting very unreadable, just for supportive text
+$font_s = 14px; //Smaller than normal pragraph, somewhat unreadable
+$font_m = 16px; //Normal paragraph size
+$font_l = 18px; //Smaller heading/bigger text
+$font_xl = 24px; //Bigger heading, i.e h2
+$font_xxl = 32px; //Even bigger. i.e h1
