LIVE-43 Added a new grid component that can be used: Masonry for the search overlay.

--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -13,4 +13,5 @@ body
 @import './constants/_fonts.styl';
 @import './components/_category.styl';
 @import './components/_search.styl';
+@import './components/_masonry.styl';
 
