--- a/www/app/stylus/constants/_variables.styl
+++ b/www/app/stylus/constants/_variables.styl
@@ -3,7 +3,7 @@ $color_gold = #ffd700; //yellow
 $color_paper = #f4f4f4; //light_yellow
 $color_evening = #262228; //dark-purple1
 $color_void = #0E0B16; //dark-purple2
-$color_ocean = #00ccd8; //blue1
+$color_ocean = #0092ab; //blue1
 $color_starry = #037584; //blue2
 $color_irises = #007849; //green
 $color_smoke = #F5F5F5; //white smoke
@@ -14,7 +14,7 @@ $bottom_offset = 72px; //Height of the bottomTabs.
 $top_offset = 48px; //Height of the header.
 
 //Media queries
-//$tiny_screen
+$tiny_screen = 400px;
 //$small_screen
 //$medium_screen
 $big_screen = 1000px; //Tablet/desktop. Below $big tabs are visible, above tabs are invisible, items are visible in header. 
