LIVE-29 Changed the way video is played

--- a/www/app/stylus/components/_overlay.styl
+++ b/www/app/stylus/components/_overlay.styl
@@ -11,12 +11,12 @@
 
 .fs-overlay {
     position: absolute /* Sit on top of the page content */
-    display: none /* Hidden by default */
+    display: block /* Hidden by default */
     width: 100% /* Full width (cover the whole page) */
     min-height: 100% /* Full height (cover the whole page) */
     top:0
     left: 0
-    background-color: $color_starry;
+    background-color: white
     z-index: 100 /* Specify a stack order in case you're using a different order for other elements*/
     .overlay-header {
         // margin-top: 48px
