LIVE-4 Updated store structure. Addod some CSS to display components in homepage

--- a/www/app/stylus/components/_overlay.styl
+++ b/www/app/stylus/components/_overlay.styl
@@ -24,6 +24,9 @@
         justify-content: space-between
     }
 }
+// .invisible {
+// 	display: hidden
+// }
 
 @media (min-width: $big_screen){
     .fs-overlay .overlay-header {
