LIVE-31 put button over video on mobile scale, make work with overlay

--- a/www/app/stylus/components/_carousel.styl
+++ b/www/app/stylus/components/_carousel.styl
@@ -301,11 +301,12 @@
   top: 0  
 
 .carouselImageTitleAndDescription
-  position: absolute;
-  top: 30px;
-  color: white;
-  left: 120px;
-  width: 60%;
+  position: absolute
+  top: 30px
+  color: white
+  left: 120px
+  width: 60%
+  z-index: 2
 
 .heroCarouselVideo    
   display: block
@@ -320,7 +321,7 @@
   .carouselRight
     display: none
   .heroCarouselImage 
-    display: none
+    display: block
     position: relative
   .carouselLeft
     flex-basis: 100%
