LIVE-43 Made header and searchbar visible for desktop. Added some avatar thumbnails. Added top_offset_desktop variable. Made some dummy pages for series, channels and TV guide

--- a/www/app/stylus/components/_common.styl
+++ b/www/app/stylus/components/_common.styl
@@ -12,3 +12,13 @@
 	display:none
 .visible
 	display:visible
+	
+//Simple way to hide stuff on mobile or tablet; use hideOnTablet, hideOnMobile
+@media (max-width: $medium_screen)
+	.hideOnMobile
+		display:none
+		
+@media (max-width: $big_screen)
+	.hideOnTablet
+		display:none
+
