--- a/www/app/stylus/components/_masonry.styl
+++ b/www/app/stylus/components/_masonry.styl
@@ -3,10 +3,9 @@
   .tile
     width:100%
     .masonry_tile_inner
-      margin:10px
+      margin:10px 10px 10px 0
     img
       width:100%
-      border-radius: 20px
     .tile-data
       margin:5px 
       width:100%
@@ -34,7 +33,7 @@
     .tile
       width:25%
       .masonry_tile_inner
-        margin:10px 20px 20px 20px
+        margin:10px 20px 20px 0
       p
         margin:5px 0 5px 0
       p.metadata
