--- a/www/app/stylus/constants/_variables.styl
+++ b/www/app/stylus/constants/_variables.styl
@@ -12,11 +12,13 @@ $cubic = cubic-bezier(.02, .01, .47, 1); //transition
 //Constants for height
 $bottom_offset = 72px; //Height of the bottomTabs. 
 $top_offset = 48px; //Height of the header.
+$top_offset_desktop = 81px;
+$bottom_offset_desktop = 0;
 
 //Media queries
 $tiny_screen = 400px;
 //$small_screen
-//$medium_screen
+$medium_screen = 600px; //Mobile
 $big_screen = 1000px; //Tablet/desktop. Below $big tabs are visible, above tabs are invisible, items are visible in header. 
 $bigger_screen = 1500px; //More items are visible in the header at this point, not much else changes. 
 
