--- a/www/app/stylus/components/_header.styl
+++ b/www/app/stylus/components/_header.styl
@@ -4,7 +4,7 @@
 
 .header{
   width: 100%;
-  background-color: #fff;
+  background: linear-gradient(0deg, #f5f5f5, #fff);
   text-transform: none !important;
   position: fixed;
   top: 0;
@@ -12,6 +12,12 @@
   color: #000;
 }
 
+.logo *{
+    color: $color_ocean;
+    font-size: $font_xl !important
+    font-weight: bold !important;
+      
+}
 .rightMenu{
   float:right;
 }
@@ -40,9 +46,6 @@
 }
 
 @media (min-width: $big_screen){
-  .header{
-    position: relative;
-  }
   .menuItem{
     margin: 20px 10px 25px 20px !important;
   }
