--- a/www/app/stylus/constants/_fonts.styl
+++ b/www/app/stylus/constants/_fonts.styl
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
-.material-icons {
+.material-icons 
   font-family: 'Material Icons';
   font-weight: normal;
   font-style: normal;
@@ -23,4 +23,10 @@
 
   /* Support for IE. */
   font-feature-settings: 'liga';
-}
+
+h3, h4
+ margin-top: 1em
+ margin-bottom: 0.5em
+
+h1, h2, h3, h4, h5, h6
+  font-weight: normal
