--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -14,6 +14,5 @@ body
 @import './components/_category.styl';
 @import './components/_search.styl';
 @import './components/_masonry.styl';
+@import './components/_mainContainer.styl'
 
-.mainContent
-    position: relative;
