LIVE-35 Updates on product card

--- a/www/app/stylus/components/_productcard.styl
+++ b/www/app/stylus/components/_productcard.styl
@@ -4,12 +4,16 @@
     position: relative;
 	width: 100%;
     overflow: hidden;
-    padding-top: 50px;
+    // padding-top: 50px;
 }
-.sixteen-by-nine{
-    padding-bottom: 56.25%;
+.keep-ratio {
+    // padding-bottom: 56.25%; 16:9
+    padding-bottom: 33.33%;
 }
-
+.card-header {
+    position:absolute;
+    right: 10px;
+}
 .content {
     position: absolute;
     top: 0;  bottom: 0;  left: 0;  right: 0;
