LIVE-4 Playback overlay style updates

--- a/www/app/stylus/components/_overlay.styl
+++ b/www/app/stylus/components/_overlay.styl
@@ -20,17 +20,14 @@
     z-index: 100 /* Specify a stack order in case you're using a different order for other elements*/
     .overlay-header {
         // margin-top: 48px
+		margin-bottom: 8px;
         display:flex
         justify-content: space-between
+
     }
 }
-// .invisible {
-// 	display: hidden
-// }
-
 @media (min-width: $big_screen){
     .fs-overlay .overlay-header {
-        // margin:0 20px
-        // margin-top:81px
+        margin-top:-40px
     }
 }
