LIVE-36 Updated product hover styles and structure

--- a/www/app/stylus/components/_productcard.styl
+++ b/www/app/stylus/components/_productcard.styl
@@ -12,12 +12,15 @@
 }
 .card-header {
     position:absolute;
-    right: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .content {
+    border: 2px solid black;
     position: absolute;
     top: 0;  bottom: 0;  left: 0;  right: 0;
-    padding: 0 5px;
+    padding-top: 48px;
 }
 .tab-header {
     width:100%;
