LIVE-36 Added poster component

--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -15,4 +15,4 @@ body
 @import './components/_search.styl';
 @import './components/_masonry.styl';
 @import './components/_mainContainer.styl';
-
+@import './components/_poster.styl';
