--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -16,3 +16,4 @@ body
 @import './components/_masonry.styl';
 @import './components/_mainContainer.styl';
 @import './components/_poster.styl';
+@import './components/_player.styl';
