--- a/www/app/stylus/components/_productcard.styl
+++ b/www/app/stylus/components/_productcard.styl
@@ -17,7 +17,7 @@
     align-items: center;
 }
 .content {
-    border: 2px solid black;
+    border: 1px solid $color_ocean;
     position: absolute;
     top: 0;  bottom: 0;  left: 0;  right: 0;
     padding-top: 48px;
