--- a/www/app/stylus/components/_productcard.styl
+++ b/www/app/stylus/components/_productcard.styl
@@ -4,11 +4,13 @@
     position: relative;
 	width: 100%;
     overflow: hidden;
+    // min-height:400px;
+    border-radius: 5px;
     // padding-top: 50px;
 }
 .keep-ratio {
     // padding-bottom: 56.25%; 16:9
-    padding-bottom: 33.33%;
+    // padding-bottom: 33.33%;
 }
 .card-header {
     position:absolute;
@@ -17,10 +19,11 @@
     align-items: center;
 }
 .content {
-    border: 1px solid $color_ocean;
-    position: absolute;
+    // border: 1px solid $color_ocean;
+    // position: absolute;
     top: 0;  bottom: 0;  left: 0;  right: 0;
-    padding-top: 48px;
+    padding-bottom: 10px;
+    // padding-top: 48px;
 }
 .tab-header {
     width:100%;
