--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -17,3 +17,4 @@ body
 @import './components/_mainContainer.styl';
 @import './components/_poster.styl';
 @import './components/_player.styl';
+@import './components/_description.styl';
