--- a/www/app/stylus/components/_masonry.styl
+++ b/www/app/stylus/components/_masonry.styl
@@ -10,14 +10,15 @@
       margin:5px 
       width:100%
       overflow:hidden
-    p
+    h4
       font-size: $font_m
-      margin: 0;
+      margin: 5px 0;
       font-weight:bold
       color: $color_ocean
     p.metadata
+      margin: 2px 0;
       font-weight:normal
-      font-size: $font_xs
+      font-size: $font_s
       color: #000
       
 @media (min-width: 500px)
