--- a/www/app/stylus/components/_search.styl
+++ b/www/app/stylus/components/_search.styl
@@ -89,9 +89,10 @@
   text-align:center
   overflow-y: scroll
   white-space: nowrap;
-  .username
+  .label
     margin:2px 0
     font-size:$font_s
+    text-overflow: ellipsis;
     overflow:hidden
   .avatar
     margin: 0 10px
@@ -145,7 +146,7 @@
   .filterButtons
     margin: 12px 12px 3px 12px
     
-.portraitAvatar
+.circleAvatar
   text-align: center
   max-width:100px
 
