LIVE-46 Added more settings

--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -18,3 +18,4 @@ body
 @import './components/_poster.styl';
 @import './components/_player.styl';
 @import './components/_description.styl';
+@import './components/_formList.styl';
