LIVE-51 Created the BurstButton component

--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -19,3 +19,4 @@ body
 @import './components/_player.styl';
 @import './components/_description.styl';
 @import './components/_formList.styl';
+@import './components/_burstButton.styl';
