LIVE-48 video player with big MaterialUI buttons

--- a/www/app/stylus/components/_burstButton.styl
+++ b/www/app/stylus/components/_burstButton.styl
@@ -1,5 +1,7 @@
 .burst-button {
 
+    font-family: 'Font Awesome'
+
     .burst-large-circle, .burst-small-circle {
         transform-origin: center;
         transition: .2s all;
