--- a/www/app/stylus/components/_video.styl
+++ b/www/app/stylus/components/_video.styl
@@ -20,3 +20,10 @@
 .vjs_video_3-dimensions
     width: 100%
     margin:5px
+
+.IMRPlayer .video-react .video-react-control-bar
+    height: 3em
+
+.IMRPlayer .video-react
+    font-size: 24px
+    font-family: Roboto, sans-serif
