--- a/www/app/stylus/constants/_fonts.styl
+++ b/www/app/stylus/constants/_fonts.styl
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
 .material-icons 
   font-family: 'Material Icons';
