LIVE-61 Experimentation with WebSockets

--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -20,3 +20,4 @@ body
 @import './components/_description.styl';
 @import './components/_formList.styl';
 @import './components/_burstButton.styl';
+@import './components/_chatOverlay.styl';
