LIVE-51 Moved chatOverlay slightly

--- a/www/app/stylus/components/_chatOverlay.styl
+++ b/www/app/stylus/components/_chatOverlay.styl
@@ -3,7 +3,8 @@
     height: 100%;
     background: rgba(0, 0, 0, .3);
     color: white;
-    position: relative;
+    position: absolute;
+    top: -72px;
     transition: .5s all;
     margin-left: -33%;
 
