LIVE-48 Added penalty card graphic + started scoreboard

--- a/www/app/stylus/components/_overlay.styl
+++ b/www/app/stylus/components/_overlay.styl
@@ -8,6 +8,7 @@
     width: 200px
     position: absolute
     z-index: 2147483647
+    display: none
 
 .fs-overlay {
     position: absolute /* Sit on top of the page content */
