--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -21,3 +21,5 @@ body
 @import './components/_formList.styl';
 @import './components/_burstButton.styl';
 @import './components/_chatOverlay.styl';
+@import './components/_penaltyCard.styl';
+@import './components/_scoreOverlay.styl';
