--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -19,7 +19,14 @@ body
 @import './components/_player.styl';
 @import './components/_description.styl';
 @import './components/_formList.styl';
+
+// Second Layer Styles
 @import './components/_burstButton.styl';
 @import './components/_chatOverlay.styl';
 @import './components/_penaltyCard.styl';
 @import './components/_scoreOverlay.styl';
+@import './components/_lineupOverlay.styl';
+
+.video-react-control-bar {
+  top: -72px !important
+}
