--- a/www/app/stylus/components/_burstButton.styl
+++ b/www/app/stylus/components/_burstButton.styl
@@ -30,4 +30,10 @@
             transform: scale(1.2) rotate(0deg);
         }
     }
+
+    &.hide {
+        .burst-large-circle {
+            transform: scale(0) rotate(360deg);
+        }
+    }
 }
