LIVE-48 Added start of individual player info overlay

--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -26,6 +26,7 @@ body
 @import './components/_penaltyCard.styl';
 @import './components/_scoreOverlay.styl';
 @import './components/_lineupOverlay.styl';
+@import './components/_playerInfoOverlay.styl';
 
 .video-react-control-bar {
   top: -72px !important
