--- a/www/app/stylus/components/_lineupOverlay.styl
+++ b/www/app/stylus/components/_lineupOverlay.styl
@@ -6,7 +6,6 @@
     width: 80%; 
     top: 50%;
     left: 50%;
-    overflow: hidden;
     transition: .5s all;
 
     &.hidden-up {
@@ -106,5 +105,16 @@
         &.transparent {
             opacity: 0;
         }
+    }
+
+    .close-btn {
+        background: rgba(2, 12, 28, .7);
+        transform: skew(-10deg);
+        position: absolute;
+        left: 17px;
+        top: -40px;
+        width: 30px;
+        height: 30px;
+        color: white;
     }
 }
