--- a/www/app/stylus/components/_playerInfoOverlay.styl
+++ b/www/app/stylus/components/_playerInfoOverlay.styl
@@ -3,12 +3,14 @@
     width: 70%;
     height: 120px;
     top: 50%;
-    left: -50%;
+    left: 50%;
     transition: .5s all;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(0);
+    opacity: 0;
 
     &.isShowing {
-        left: 50%;
+        transform: translate(-50%, -50%) scale(1);
+        opacity: 1;
     }
 
     &.isModalOpen {
@@ -82,6 +84,13 @@
         width: 30px;
         height: 30px;
         color: white;
+
+        i {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
     }
 
     .right-btn {
