LIVE-48 Added the almighty Fidget Spinner

--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -22,6 +22,7 @@ body
 
 // Second Layer Styles
 @import './components/_burstButton.styl';
+@import './components/_fidgetSpinner.styl';
 @import './components/_chatOverlay.styl';
 @import './components/_penaltyCard.styl';
 @import './components/_scoreOverlay.styl';
