LIVE-48 Added replay and highlights row

--- a/www/app/stylus/components/_player.styl
+++ b/www/app/stylus/components/_player.styl
@@ -5,3 +5,14 @@
 @media (max-width: $medium_screen) and (orientation : landscape)
     .fs-overlay
         transform: rotate(0)
+
+
+.replay
+    margin-left: -12px
+
+.IMRPlayer .video-react .video-react-big-play-button
+    display: none
+
+.IMRPlayer .video-react .video-react-mouse-display, .IMRPlayer .video-react .video-react-play-progress:after
+    font-family: "Roboto", sans-serif !important
+
