--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -28,7 +28,5 @@ body
 @import './components/_scoreOverlay.styl';
 @import './components/_lineupOverlay.styl';
 @import './components/_playerInfoOverlay.styl';
-
-.video-react-control-bar {
-  top: -72px !important
-}
+@import './components/_replayer.styl';
+@import './components/_highlights.styl';
